--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: volt
 description: "Simple, fast, effortless data fetching and real-time updates"
 version: 0.0.1
 homepage: https://github.com/lightyeardev/volt
+repository: https://github.com/lightyeardev/volt
 
 environment:
   sdk: ^3.5.3
