--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,5 @@ migrate_working_dir/
 **/doc/api/
 .dart_tool/
 build/
-.flutter-plugins/
-.flutter-plugins-dependencies/
+.flutter-plugins
+.flutter-plugins-dependencies
