--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   collection: ^1.18.0
   crypto: ^3.0.5
+  disk_space_plus: ^0.2.4
   flutter:
     sdk: flutter
   flutter_hooks: ^0.20.5
